# mixt

./: .pylintrc  LICENSE  Makefile  README.md  README.rst  setup.cfg  setup.py
.circleci/: check-every-commit.sh  config.yml
api_doc/: README.md  __init__.py  __main__.py  app.py  code_utils.py  export.py  insect_mate.py  serve.py  types.py
api_doc/components/: __init__.py  doc.py  intro.py  main_menu.py  script.py  style.py
api_doc/components/generic/: __init__.py  code.py  details.py  menu.py  rst.py
api_doc/components/manual/: __init__.py  base.py  context.py  contrib_css.py  html_tags.py  html_utils.py  intro.py  proptypes.py  user_guide.py
api_doc/components/models/: __init__.py  base_container.py  code.py  docstring.py  function.py  klass.py  module.py  proptypes.py  value.py
docs/: api.html  contrib-css.html  global.css  global.js  index.html  typeset.css  user-guide.html  vendored.js
src/: __init__.py
src/mixt/: __init__.py  element.py  example.py  example_pure_python.py  exceptions.py  html.py  mixt.pth  proptypes.py
src/mixt/codec/: README.md  fast_register.py  html_tokenizer.py  parser.py  register.py  state.py  tokenizer.py
src/mixt/contrib/: README.rst  __init__.py
src/mixt/contrib/css/: __init__.py  css_keywords_list.py  loading.py  modes.py  rendering.py  units.py  utils.py  vars.py
src/mixt/contrib/semantic_ui/: components.py
src/mixt/examples/: README.md  __init__.py  simple.py  simple_pure_python.py
src/mixt/examples/todolist/: README.md  __init__.py  __main__.py  data.py
src/mixt/examples/todolist/components/: __init__.py  app.py  form.py  list.py  todo.py
src/mixt/examples/user_guide/: README.md  __init__.py  __main__.py  mixt.py  pure_python.py
src/mixt/internal/: __init__.py  base.py  collector.py  collectors.py  dev_mode.py  html.py  proptypes.py
src/mixt/misc/: __init__.py  pylint_no_mixt_encoding_checker.py
src/mixt/pyxl/: README.md  base.py  browser_hacks.py  element.py  example.py  html.py  utils.py
src/mixt/pyxl/codec/: html_tokenizer.py  parser.py  register.py  tokenizer.py
src/mixt/pyxl/scripts/: parse_file.py
src/mixt/scripts/: __init__.py  mixt_post_install.py  parse_file.py  run_file.py
tests/: README.md  test_attributes_as_kwargs.py  test_boolean_attributes.py  test_collector.py  test_complex_proptypes.py  test_context.py  test_default_props_values.py  test_dev_mode.py  test_dummy.py  test_element.py  test_examples.py  test_hoc.py  test_html_h.py  test_html_input.py  test_main_imports.py  test_parent.py  test_proxy.py  test_refs.py  test_required_props.py
tests/contrib/css/: __init__.py  test_at_rules.py  test_extend.py  test_loading.py  test_media_queries.py  test_modes.py  test_rendering.py  test_units.py  test_vars.py
tests/pyxl/: README.md  __init__.py  test_attributes_as_kwargs.py  test_boolean_attributes.py  test_complex_proptypes.py  test_context.py  test_default_props_values.py  test_dev_mode.py  test_element.py  test_html_input.py  test_mandatory.py  test_nospace_closing_tag.py  test_required_props.py
tests/pyxl/original/: README.md  test_attr_name_case.py  test_basic.py  test_curlies_in_attrs_1.py  test_curlies_in_attrs_2.py  test_curlies_in_strings_1.py  test_curlies_in_strings_2.py  test_curlies_in_strings_3.py  test_curlies_in_strings_4.py  test_eof.py  test_eof_1.py  test_errors.py  test_html_comments_1.py  test_html_comments_2.py  test_if.py  test_if_1.py  test_if_2.py  test_if_3.py  test_if_4.py  test_nested_curlies.py  test_python_comments_1.py  test_python_comments_2.py  test_python_comments_3.py  test_tags_in_curlies_1.py  test_tags_in_curlies_10.py  test_tags_in_curlies_2.py  test_tags_in_curlies_3.py  test_tags_in_curlies_4.py  test_tags_in_curlies_5.py  test_tags_in_curlies_6.py  test_tags_in_curlies_7.py  test_tags_in_curlies_8.py  test_tags_in_curlies_9.py  test_whitespace.py  test_whitespace_1.py  test_whitespace_10.py  test_whitespace_11.py  test_whitespace_12.py  test_whitespace_2.py  test_whitespace_3.py  (+6 more)
tests/pyxl_original/: README.md  test_basic.py  test_curlies_in_attrs.py  test_curlies_in_strings.py  test_errors.py  test_html_comments.py  test_if.py  test_nested_curlies.py  test_python_comments.py  test_tags_in_curlies.py
